# signal-auras

./: .gitignore  .luarc.json  AGENTS.md  Cargo.toml  README.md  flake.nix  justfile
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
crates/signal-auras-cli/: Cargo.toml
crates/signal-auras-cli/src/: input_cache.rs  lib.rs  logging.rs  main.rs  prompt.rs  runner.rs
crates/signal-auras-cli/src/runner/: controller.rs  lifecycle.rs  runtime_loop.rs
crates/signal-auras-core/: Cargo.toml
crates/signal-auras-lua/: Cargo.toml
crates/signal-auras-wayland/: Cargo.toml
crates/signal-auras-wayland/src/: adapter.rs  capability.rs  diagnostics.rs  evdev.rs  event_loop.rs  input.rs  kde.rs  kde_bridge.rs  lib.rs  overlay.rs  portal.rs  process.rs  shortcut.rs  uinput.rs
examples/: composite-bindings.lua  input-motions.lua  poe2-hideout.lua  poe2-legacy.lua  poe2.lua  poe2_minion.lua  prompt-scope.lua
examples/poe2/: progress_heavy_stun.webm  refutation_cooldown.webm
lua-types/: signal-auras.lua
nixos/: signal-auras.nix
scripts/: overlay-smoke-nested-session.sh  overlay-smoke-nested.sh
specs/001-lua-hotkey-runner/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-wayland-compositor-adapter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-lua-editor-tooling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-composite-bindings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-input-motions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-input-performance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-runtime-event-loop-performance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-stale-focus-handling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-callback-wakeups/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-repeat-overload-policy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-robust-device-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-runtime-shutdown-reliability/: plan.md  spec.md  tasks.md
specs/013-true-input-latency-metrics/: plan.md  spec.md  tasks.md
specs/014-full-key-coverage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-scoped-focus-pass-through/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-lua-controller-runtime/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-poe2-state-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-overlay-render-providers/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
src/: lib.rs
(+111 files in other folders)
