[package]
name = "signal-auras-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
dialoguer = "0.11"
signal-auras-core = { path = "../signal-auras-core" }
signal-auras-lua = { path = "../signal-auras-lua" }
signal-auras-wayland = { path = "../signal-auras-wayland" }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "fmt"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "signal-auras"
path = "src/main.rs"
