[package]
name = "signal-auras-wayland"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ashpd = { version = "0.13.11", features = ["remote_desktop", "screencast"] }
libc = "0.2"
mio = { version = "1.0", features = ["os-ext", "os-poll"] }
nix = { version = "0.30", features = ["event", "signal", "time"] }
signal-auras-core = { path = "../signal-auras-core" }
tracing = "0.1"
udev = "0.9"
zbus = "5.15.0"

# The first real adapter layer uses std/env session detection and fail-closed
# provider contracts. Add compositor-specific crates here when a backend is
# selected behind the adapter traits.

[lib]
path = "src/lib.rs"
